--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.14",
+        "@vitejs/plugin-vue": "^4.5.0",
+        "vue": "^3.3.8"
     }
 }
